AC_INIT([Chaos simulator], [0.5], [matthieu.journault@free.fr],[main_cc], [])
AC_PREREQ([2.59])
AC_CONFIG_MACRO_DIR([./m4/])
DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(OFF)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(OFF)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN($PACKAGE_NAME, [doxygen.cfg])
AM_INIT_AUTOMAKE([1.10 -Wall no-define silent-rules])
AC_LANG_PUSH([C++])
AX_CXX_COMPILE_STDCXX_11
AC_CHECK_HEADERS([SFML/Graphics.hpp])
AC_LANG_POP([C++])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
